syntax = "proto3";
option csharp_namespace = "Blazor_WASM_gRPC_EFCore.Shared.Protos";
import "google/protobuf/empty.proto";
package blogproto;

service BlogProto{
	rpc GetPosts(google.protobuf.Empty) returns (Posts);
	rpc AddPost(Post) returns (AddPostResult);
}

message Post {
	int32 post_id = 1;
	string title = 2;
	string content = 3;
	int64 created_utc_ticks = 4;
	repeated Tag tags_in_post_repeated = 5; // Post with many Tags
}
message Posts {
	repeated Post posts_repeated = 1;
}
message AddPostResult {
	int32 post_id = 1;
}

message Tag {
	string tag_id = 1; // Tag itself: string
	repeated Post posts_in_tag_repeated = 2; // Tag with many Posts
}
message Tags {
	repeated Tag tags_repeated = 1;
}
